Physics system working except volumes and child objects

--- a/modules/G4D_avatar/Avatar.ini
+++ b/modules/G4D_avatar/Avatar.ini
@@ -12,8 +12,8 @@ linear_z = -0.500 0.000 0.100
 parent = body
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -0.261 -0.186 -0.700
-box_max = 0.261 0.148 0.762
+box_min = -0.338 -0.299 -0.822
+box_max = 0.338 0.333 0.762
 
 [RENDERABLE butt]
 parent = body
@@ -55,10 +55,10 @@ rotation = 0.000 -0.000 0.000
 
 [COLLIDER l_foot_collider]
 parent = l_foot
-position = 0.249 0.036 1.036
+position = 0.099 0.036 1.010
 rotation = 0.000 -0.000 0.000
-box_min = -0.183 -0.131 -1.100
-box_max = 0.083 0.239 -0.576
+box_min = -0.183 -0.056 -1.100
+box_max = 0.046 0.166 -0.701
 
 [IK_TARGET l_foot_ik]
 parent = l_ankle
@@ -100,10 +100,10 @@ rotation = 0.000 -0.000 0.000
 
 [COLLIDER r_foot_collider]
 parent = r_foot
-position = -0.249 0.036 1.036
+position = -0.099 0.036 1.010
 rotation = 0.000 -0.000 0.000
-box_min = -0.083 -0.131 -1.100
-box_max = 0.183 0.239 -0.576
+box_min = -0.046 -0.056 -1.100
+box_max = 0.183 0.166 -0.701
 
 [IK_TARGET r_foot_ik]
 parent = r_ankle
@@ -222,6 +222,13 @@ rotation = -0.000 -0.000 0.000
 parent = r_wrist
 position = 0.080 0.000 -0.030
 rotation = -0.000 -0.000 0.000
+
+[COLLIDER feet_collider]
+parent = body
+position = 0.000 -0.044 -1.081
+rotation = 0.000 -0.000 0.000
+box_min = -0.100 -0.100 -0.100
+box_max = 0.100 0.100 0.345
 
 [IK_TARGET ground]
 parent = Avatar
