Basic cube rockets

--- a/modules/G4D_avatar/Avatar.ini
+++ b/modules/G4D_avatar/Avatar.ini
@@ -12,8 +12,8 @@ linear_z = -0.500 0.000 0.100
 parent = body
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -0.338 -0.299 -0.822
-box_max = 0.338 0.333 0.762
+box_min = -0.338 -0.299 -0.638
+box_max = 0.338 0.333 0.446
 
 [RENDERABLE butt]
 parent = body
@@ -53,13 +53,6 @@ parent = l_ankle
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
 
-[COLLIDER l_foot_collider]
-parent = l_foot
-position = 0.099 0.036 1.010
-rotation = 0.000 -0.000 0.000
-box_min = -0.183 -0.056 -1.100
-box_max = 0.046 0.166 -0.701
-
 [IK_TARGET l_foot_ik]
 parent = l_ankle
 position = 0.000 0.113 -0.072
@@ -97,13 +90,6 @@ angular_x = 25.000 0.000 -45.000
 parent = r_ankle
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-
-[COLLIDER r_foot_collider]
-parent = r_foot
-position = -0.099 0.036 1.010
-rotation = 0.000 -0.000 0.000
-box_min = -0.046 -0.056 -1.100
-box_max = 0.183 0.166 -0.701
 
 [IK_TARGET r_foot_ik]
 parent = r_ankle
@@ -182,6 +168,13 @@ position = -0.000 0.159 0.091
 rotation = 90.000 -0.000 0.000
 znear = 0.010
 
+[COLLIDER head_collider]
+parent = head
+position = -0.000 0.052 0.097
+rotation = 0.000 -0.000 0.000
+box_min = -0.146 -0.146 -0.146
+box_max = 0.146 0.146 0.146
+
 [JOINT r_shoulder]
 parent = torso
 position = 0.209 -0.056 0.340
@@ -228,7 +221,7 @@ parent = body
 position = 0.000 -0.044 -1.081
 rotation = 0.000 -0.000 0.000
 box_min = -0.100 -0.100 -0.100
-box_max = 0.100 0.100 0.345
+box_max = 0.100 0.100 0.784
 
 [IK_TARGET ground]
 parent = Avatar
