--- a/modules/G4D_avatar/Avatar.ini
+++ b/modules/G4D_avatar/Avatar.ini
@@ -53,7 +53,7 @@ parent = l_ankle
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
 
-[IK_TARGET l_foot_ik]
+[TARGET l_foot_ik]
 parent = l_ankle
 position = 0.000 0.113 -0.072
 rotation = 0.000 -0.000 0.000
@@ -91,7 +91,7 @@ parent = r_ankle
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
 
-[IK_TARGET r_foot_ik]
+[TARGET r_foot_ik]
 parent = r_ankle
 position = 0.000 0.113 -0.072
 rotation = 0.000 -0.000 0.000
@@ -145,7 +145,7 @@ parent = l_wrist
 position = 0.000 -0.000 0.000
 rotation = -0.000 0.000 0.000
 
-[IK_TARGET l_hand_ik]
+[TARGET l_hand_ik]
 parent = l_wrist
 position = -0.080 0.000 -0.030
 rotation = -0.000 0.000 0.000
@@ -211,7 +211,7 @@ parent = r_wrist
 position = 0.000 0.000 0.000
 rotation = -0.000 -0.000 0.000
 
-[IK_TARGET r_hand_ik]
+[TARGET r_hand_ik]
 parent = r_wrist
 position = 0.080 0.000 -0.030
 rotation = -0.000 -0.000 0.000
@@ -223,7 +223,7 @@ rotation = 0.000 -0.000 0.000
 box_min = -0.100 -0.100 -0.100
 box_max = 0.100 0.100 0.784
 
-[IK_TARGET ground]
+[TARGET ground]
 parent = Avatar
 position = 0.000 -0.049 -1.173
 rotation = 0.000 -0.000 0.000
