--- a/modules/XENON_dev/bigpit.ini
+++ b/modules/XENON_dev/bigpit.ini
@@ -3,27 +3,27 @@ mass = 20000.000
 
 [VOLUME -back-door.001]
 parent = bigpit
-position = 0.000 -4.456 0.000
+position = 0.000 -5.979 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -2.000 -0.144 -2.156
-box_max = 2.000 2.081 2.156
+box_min = -2.000 -0.193 -2.156
+box_max = 2.000 2.793 2.156
 
 [VOLUME -interior.001]
 parent = bigpit
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -4.000 -4.000 -2.152
-box_max = 4.000 4.000 2.152
+box_min = -4.000 -5.367 -2.152
+box_max = 4.000 5.367 2.152
 
 [ADAPTER adapter.001]
 parent = bigpit
 type = test
-position = 0.000 -4.514 0.000
+position = 0.000 -6.057 0.000
 rotation = 90.000 -0.000 0.000
 
-[IK_TARGET bigpit.console_target]
+[TARGET bigpit.console_target]
 parent = bigpit
-position = 0.001 3.765 -2.154
+position = 0.001 5.052 -2.154
 rotation = 0.000 -0.000 0.000
 
 [RENDERABLE front-window-glass.001]
@@ -40,6 +40,6 @@ rotation = 0.000 -0.000 0.000
 parent = bigpit
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -4.514 -4.514 -2.257
-box_max = 4.514 4.514 2.257
+box_min = -4.514 -6.057 -2.257
+box_max = 4.514 6.057 2.257
 
