--- a/modules/XENON_dev/cubepit.ini
+++ b/modules/XENON_dev/cubepit.ini
@@ -21,7 +21,7 @@ type = test
 position = 0.000 -1.128 0.000
 rotation = 90.000 -0.000 0.000
 
-[IK_TARGET cubepit.console_target]
+[TARGET cubepit.console_target]
 parent = cubepit
 position = 0.000 0.753 -1.001
 rotation = 0.000 -0.000 0.000
