--- a/modules/XENON_dev/hugepit.ini
+++ b/modules/XENON_dev/hugepit.ini
@@ -5,15 +5,15 @@ mass = 800000.000
 parent = hugepit
 position = 0.000 -40.770 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -19.639 -1.010 -5.176
-box_max = 19.639 8.757 5.176
+box_min = -19.639 -1.010 -8.673
+box_max = 19.639 8.757 8.673
 
 [VOLUME -interior.002]
 parent = hugepit
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -24.100 -36.842 -5.264
-box_max = 24.100 40.459 5.264
+box_min = -24.100 -36.842 -8.820
+box_max = 24.100 40.459 8.820
 
 [ADAPTER adapter.002]
 parent = hugepit
@@ -26,9 +26,9 @@ parent = hugepit
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
 
-[IK_TARGET hugepit.console_target]
+[TARGET hugepit.console_target]
 parent = hugepit
-position = -0.001 40.313 -5.267
+position = -0.001 40.313 -8.825
 rotation = 0.000 -0.000 0.000
 
 [RENDERABLE hull.002]
@@ -40,6 +40,6 @@ rotation = 0.000 -0.000 0.000
 parent = hugepit
 position = 0.000 0.000 0.000
 rotation = 0.000 -0.000 0.000
-box_min = -27.196 -41.576 -5.474
-box_max = 27.196 41.576 5.474
+box_min = -27.196 -41.576 -9.171
+box_max = 27.196 41.576 9.171
 
