--- a/modules/G4D_thruster/SmallThruster.ini
+++ b/modules/G4D_thruster/SmallThruster.ini
@@ -28,16 +28,28 @@ type = fluid
 position = -0.125 -0.414 0.000
 rotation = 90.000 -0.000 0.000
 
+[JOINT gimbal]
+parent = SmallThruster
+position = 0.000 0.000 0.000
+rotation = 0.000 -0.000 0.000
+angular_x = -10.000 0.000 10.000
+angular_z = -10.000 0.000 10.000
+
+[TARGET plasma]
+parent = gimbal
+position = 0.000 -0.038 0.000
+rotation = -90.000 0.000 0.000
+
+[RENDERABLE spike]
+parent = gimbal
+position = 0.000 0.000 0.000
+rotation = 0.000 0.000 0.000
+
 [ADAPTER highvoltage]
 parent = SmallThruster
 type = highvoltage
 position = 0.000 -0.414 -0.175
 rotation = 90.000 -0.000 0.000
-
-[TARGET plasma]
-parent = SmallThruster
-position = 0.000 0.000 0.000
-rotation = -90.000 -0.000 0.000
 
 [RENDERABLE thruster]
 parent = SmallThruster
